# Robotica

./: .gitignore  .gitmodules  .travis-backup.yml  .travis.yml  CMakeLists.txt  README.md  WebMeuk.sln  conanfile.txt  conanfile.txt.in  doxy-config  index.html  msvc_debug.conanprofile  msvc_release.conanprofile
.ci/: run.bat
AudioSpectrumAdvance/AudioSpectrumAdvance/: Analyzer.cs  AudioSpectrumAdvance.csproj  Form1.Designer.cs  Form1.cs  Program.cs
Controllerv1/: index.html  indexbackup1-6-2020.html
MasterServer/: .gitignore  Commands.md  ConnectionManager.cs  Program.cs  Startup.cs
MasterServer/Controllers/: Cleanup.cs  Health.cs  Robot.cs
MasterServer/Socket/: BaseConnector.cs  ControllerConnector.cs  RobotConnector.cs  TelemeryConnector.cs  TelemetryConnector.cs
TelemetryWeb/: .gitignore  App.razor  Program.cs  Telemetry.csproj  _Imports.razor  package-lock.json  package.json
TelemetryWeb/Properties/: launchSettings.json
TelemetryWeb/public/: index.html
TelemetryWeb/src/: App.svelte
TelemetryWeb/src/Components/: GraphLine.svelte
TelemetryWeb/wwwroot/: index.html
assets/: Clubs.xml  Diamonds.xml  Hearts.xml  Spades.xml  moonrock.xml
assets/shaders/: default.frag.glsl  default.vert.glsl
cmake/: FindWebots.cmake  FindWebots_CPP.cmake  SourceFileUtils.cmake  cmakepp.cmake
images/: 1.xcf  2.xcf  3.xcf  UwU.xcf
protos/: .AssemblyRobotURDF-Camera.cache  .AssemblyRobotURDF.cache  .E-puck.cache  .E-puckDistanceSensor.cache  .E-puckGroundSensors.cache  .Pi-puck.cache  .Rock-sizeable.cache  AssemblyRobotURDF-Camera.proto  AssemblyRobotURDF.proto  Bron.proto  E-puck.proto  Obstacle.wbo  Rock-sizeable.proto  UWUBot-Tracked.proto  UWUBot.proto  UwuRobot.proto  uwu_flag.proto
source/: CMakeLists.txt  SoundAnalyzer.cpp  SoundAnalyzer.h  SoundAnalyzer.hpp  WebViewManager.cpp  WebViewManager.h  decode.c  decode.h  main.cpp  robot.hpp
source/comms/: gripper_callback.hpp  joystick_callback.hpp  robotModes_callback.hpp  strategy_callback.hpp  websocket.hpp
source/dance/: MusicAnalyzer.cpp  MusicAnalyzer.h  MusicAnalyzer.hpp
source/dance/strategies/: dance_moves.cpp  dance_moves.hpp  idance_strategy.hpp
source/utility/: cache.hpp  inverseKinematics.hpp  math.hpp  mesh.hpp  traits.hpp  typedefs.hpp  utility.hpp
source/vision/: cascade_classifier.hpp  classifier.hpp  converters.hpp  floodfill.hpp  heat_measure.hpp  iclassifier.hpp  mesher.hpp  parallax.hpp  partition_space.hpp  pool_classifier.hpp  qr_classifier.hpp  rock_classifier.hpp  weighted_graph.hpp  world_model.cpp  world_model.hpp
source/window/: gui_image.hpp  imgui_bindings.cpp  imgui_bindings.h  imgui_bindings.hpp  main_window.cpp  main_window.hpp  setting.hpp  window.cpp  window.hpp  world_image.hpp
source/window/3d/: buffer.hpp  camera.hpp  gui_scene.hpp  primitive.hpp  program.hpp  target.hpp
source/window/imgui_plot/: imgui_plot.cpp  sytse pls halp
source/world/: controller.cpp  controller.hpp  robot.cpp  robot.hpp  world.hpp
source/world/strategy/: icompletable_strategy.hpp  istrategy.hpp  mazemap.hpp  stategy_goto.hpp  strategy_circle.hpp  strategy_dance.hpp  strategy_goto_next.hpp  strategy_hug_wall.hpp  strategy_lookat.hpp  strategy_maze.hpp  strategy_pickup.hpp  strategy_playingcards.hpp
web/: ConnectionManager.cs  Program.cs  RunWeb.sh  Startup.cs  WebSocketHandler.cs
web/Controllers/: Controller.cs
web/Properties/: launchSettings.json
web/Socket/: ControlerConnector.cs  RobotConnector.cs
worlds/: .testbox.wbproj  AI-training-blank.wbt  Doolhof_V1.1.wbt  KwalificatieMaanlandschap-grindbak rev.0.1.wbt  Kwalificatie_Vision_World.wbt  Model_MoonSurvival.wbo  PlayingCards.wbt  World_MoonSurvival.wbt  humanoid_sprint.wbt  kwalificatie_moonworld.wbt  kwalificatie_moonworld_flag.wbt  kwalificatie_pools.wbt  maze_startpos.wbt  moon.wbt  testbox.wbt  tracked.wbt  vision_simplified.wbt
